changing UI, progress home

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,8 +29,9 @@
 
 <body>
     <nav class="w-full h-20 border-b-2 flex items-center px-10 font-Poppins">
-        <img src="img/book.svg" alt="">
-        <a href="dashboard.html" class=" font-bold text-2xl ml-1">Perpustakaan Kita</a>
+
+        <a href="dashboard.html" class=" font-bold text-2xl flex gap-1"><img src="img/book.svg" alt="">Perpustakaan
+            Kita</a>
         <div class="m-auto w-2/3 py-2 px-3 border flex items-center justify-between rounded-lg text-gray-500">Cari Buku
             <img src="img/search.svg" alt=""></div>
         <a class="font-bold text-lg" href="about.html">Tentang Kita</a>
