--- a/home.html
+++ b/home.html
@@ -22,9 +22,9 @@
             <h1 class="font-Noto text-4xl font-semibold">Perpustakaan Kita</h1>
         </a>
         <div class="font-PT flex gap-10">
-            <a href="" class="underline underline-offset-4">HOME</a>
-            <a href="" class="hover:underline underline-offset-4">ABOUT</a>
-            <a href="" class="hover:underline underline-offset-4">CONTACT</a>
+            <a href="home.html" class="underline underline-offset-4">HOME</a>
+            <a href="about.html" class="hover:underline underline-offset-4">ABOUT</a>
+            <a href="contact.html" class="hover:underline underline-offset-4">CONTACT</a>
             <button class="searchBtn"><img src="img/search.svg" alt=""></button>
         </div>
     </nav>
