--- a/detail.html
+++ b/detail.html
@@ -97,8 +97,8 @@
     </div>
 
     <div class="m-auto w-[1064px] h-[480px] bg-[#F5F1ED] rounded-xl flex flex-col py-[50px] px-[57px]">
-        <h1 class="font-Noto text-[64px]">Other Product</h1>
-        <div class="flex gap-12 mx-auto mt-4">
+        <h1 class="font-Noto text-5xl">Other Product</h1>
+        <div class="flex gap-12 mx-auto mt-[35px]">
             <a href="detail.html" class="flex flex-col items-center">
                 <img class="w-[150px] h-[223px] shadowCard" src="img/bumi-cover.jpg" alt="">
                 <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
