--- a/search.html
+++ b/search.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Search</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,6 @@
     <link rel="icon" href="img/book.svg" />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <nav
       class="w-full h-[100px] px-20 flex items-center justify-between border"
@@ -48,55 +47,15 @@
       <button class="closeBtn"><img src="img/close.svg" alt="" /></button>
     </div>
 
-    <section
-      class="w-full h-[400px] bg-[#F5F1ED] flex gap-16 justify-center items-center"
+    <div
+      class="w-full h-[400px] flex flex-col items-center justify-center bg-[#F5F1ED]"
     >
-      <div class="flex items-center">
-        <img
-          class="w-[150px] h-[223px] shadowLeft"
-          src="img/selena-cover.jpg"
-          alt=""
-        />
-        <img
-          class="w-[178px] h-[265px] z-10"
-          src="img/siputih-cover.jpg"
-          alt=""
-        />
-        <img
-          class="w-[150px] h-[223px] shadowLeft"
-          src="img/lumpu-cover.jpg"
-          alt=""
-        />
-      </div>
+      <h1 class="font-Noto text-[64px] font-semibold">Search</h1>
+      <hr class="w-[100px] border-black mt-7" />
+    </div>
 
-      <div class="">
-        <h1 class="font-Noto text-[64px]">This Month</h1>
-        <hr class="w-[100px]  border-black mt-2" />
-        <p class="w-[435px] font-Lato font-light text-[#808080] mt-5">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          quibusdam.
-        </p>
-        <form action="home.html">
-          <button class="w-[200px] h-[50px] border border-black mt-8">
-            READ MORE
-          </button>
-        </form>
-      </div>
-    </section>
-
-    <section class="w-full py-14 flex flex-col items-center gap-14">
-      <div class="flex flex-col items-center">
-        <h1 class="font-Noto text-4xl font-semibold">Newest Editions</h1>
-        <hr class="w-[100px]  border-black mt-7" />
-        <p
-          class="w-[435px] font-Lato font-light text-[#808080] mt-5 text-center"
-        >
-          At nec pretium eget ultrices in viverra enim. Sed orci, in nascetur
-          nam ac bibendum faucibus mattis.
-        </p>
-      </div>
-
-      <div class="flex gap-24">
+    <div class=" flex flex-col gap-10 py-20 items-center">
+      <div class="flex gap-12">
         <a href="detail.html" class="flex flex-col items-center">
           <img
             class="w-[150px] h-[223px] shadowCard"
@@ -152,94 +111,84 @@
             Tere Liye
           </p>
         </a>
-      </div>
-    </section>
-
-    <section
-      class="bg-[url('img/quote.png')] bg-fixed bg-no-repeat bg-center bg-cover h-[200px] flex items-center justify-center"
-    >
-      <p class="w-[900px] font-Noto text-4xl text-white">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias,
-        voluptatem?
-      </p>
-    </section>
-
-    <section class="w-full py-14 flex flex-col items-center gap-14">
-      <div class="flex flex-col items-center">
-        <h1 class="font-Noto text-4xl font-semibold">Newest Editions</h1>
-        <hr class="w-[100px]  border-black mt-7" />
-        <p
-          class="w-[435px] font-Lato font-light text-[#808080] mt-5 text-center"
-        >
-          At nec pretium eget ultrices in viverra enim. Sed orci, in nascetur
-          nam ac bibendum faucibus mattis.
-        </p>
-      </div>
-
-      <div class="flex gap-24">
         <a href="detail.html" class="flex flex-col items-center">
           <img
             class="w-[150px] h-[223px] shadowCard"
-            src="img/bumi-cover.jpg"
+            src="img/komet2-cover.jpg"
             alt=""
           />
-          <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bulan-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bulan</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/matahari-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Matahari</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bintang-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bintang</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/komet-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Komet</h1>
+          <h1 class="font-Noto text-2xl mt-2">Komet II</h1>
           <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
             Tere Liye
           </p>
         </a>
       </div>
-    </section>
+
+      <div class="flex gap-12">
+        <a href="detail.html" class="flex flex-col items-center">
+          <img
+            class="w-[150px] h-[223px] shadowCard"
+            src="img/lumpu-cover.jpg"
+            alt=""
+          />
+          <h1 class="font-Noto text-2xl mt-2">Lumpu</h1>
+          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+            Tere Liye
+          </p>
+        </a>
+        <a href="detail.html" class="flex flex-col items-center">
+          <img
+            class="w-[150px] h-[223px] shadowCard"
+            src="img/selena-cover.jpg"
+            alt=""
+          />
+          <h1 class="font-Noto text-2xl mt-2">Selena</h1>
+          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+            Tere Liye
+          </p>
+        </a>
+        <a href="detail.html" class="flex flex-col items-center">
+          <img
+            class="w-[150px] h-[223px] shadowCard"
+            src="img/ceros-cover.jpg"
+            alt=""
+          />
+          <h1 class="font-Noto text-2xl mt-2">Ceros</h1>
+          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+            Tere Liye
+          </p>
+        </a>
+        <a href="detail.html" class="flex flex-col items-center">
+          <img
+            class="w-[150px] h-[223px] shadowCard"
+            src="img/nebula-cover.jpg"
+            alt=""
+          />
+          <h1 class="font-Noto text-2xl mt-2">Nebula</h1>
+          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+            Tere Liye
+          </p>
+        </a>
+        <a href="detail.html" class="flex flex-col items-center">
+          <img
+            class="w-[150px] h-[223px] shadowCard"
+            src="img/siputih-cover.jpg"
+            alt=""
+          />
+          <h1 class="font-Noto text-2xl mt-2">Si Putih</h1>
+          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+            Tere Liye
+          </p>
+        </a>
+      </div>
+    </div>
 
     <footer
       class="h-20 bg-[#eaeaea] flex items-center justify-center font-mono text-lg"
     >
       made with ♥ by Kita.
     </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
